--- a/movie_app/templates/detail_movie.html
+++ b/movie_app/templates/detail_movie.html
@@ -9,13 +9,13 @@
 
 {% block main_content %}
 
-    <div class="text-center mb-2"><img src='{{ movie.img.url }}' class="img-fluid shadow" style="height: 500px">
+    <div class="text-center mb-4"><img src='{{ movie.img.url }}' class="img-fluid shadow" style="height: 500px">
     <p class="text-end"></p>
     </div>
         <h3 class="mt-2">{{ movie.name }}</h3>
         <p>{{ movie.description }}</p>
 
-    <hr>
+    <hr class="mb-4">
 
       <a data-bs-toggle="collapse" href="#trailer" role="button" aria-expanded="false" aria-controls="trailer">
         <h5>Трейлер</h5>
@@ -28,6 +28,15 @@
             </video>
         </div>
     </div>
+
+        <div class="card">
+            <div class="card-header">Фильм {{ movie.name }} смотреть онлайн</div>
+                <div class="card card-body">
+                    <video class="embed-responsive-item" controls loop>
+  	                <source src="{{ movie.trailer.url }}">
+                    </video>
+                </div>
+        </div>
 
 {% endblock %}
 
